--- a/css/general.css
+++ b/css/general.css
@@ -3,6 +3,8 @@ html {
 }
 *, *::before, *::after {
     box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -10,16 +12,8 @@ a {
     color: inherit;
 }
 
-ul, li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+ul, li { list-style: none; }
 
-h1, h2, h3, h4, h5, h6, a, p, ol, table, td, tr, th, section, article, span {
-    margin: 0;
-    padding: 0;
-}
 
 img {
     max-width: 100%;
@@ -32,8 +26,6 @@ body {
     font-size: 20px;
     line-height: 24px;
     font-weight: 400;
-    margin: 0;
-    padding: 0;
 }
 
 /* сюда писать общие стили типа, у нас есть 3 блока с одинаковыми настройками
